# transcribe-project

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  requirements.txt  svelte.config.js  tsconfig.json  vercel.json  vite.config.js
.github/: copilot-instructions.md
.learnings/: index.md
.rna/: _base-agent.md  config.json  rna-schema.json  toon-registry.md  validate-registry.js
__handovers__/: CURRENT.md  README.md
__specs__/: F04-transcript-storage.md  F05-history-view.md  F06-settings-model-selection.md  F07-url-detection-video-preview.md  F08-video-picker.md  F09-queue-view.md  F10-job-history.md  F11-ui-improvements.md  F12-picker-queue-ux.md  F13-pipeline-queue-architecture.md  F14-progressive-picker-cache.md  FIX-01-csp-fonts.md  FIX-02-live-streaming-desktop.md  FIX-03-window-decorations.md  FIX-04-probe-generator-crash.md  FIX-05-instagram-error-handling.md  FIX-06-thumbnail-fallback.md  FIX-07-instagram-reels-page-probe.md  FIX-08-instagram-reels-plural-oembed-400.md  FIX-09-safari-cookie-permission-during-download.md  FIX-10-mac-ver-int-crash.md  FIX-10-youtube-shorts-int-crash-NEEDS-REPRO.md  INDEX.md
api/: sidecar.py  transcribe.py  transcribe_core.py
deploy/: README.md  destroy.sh  nginx-ssl.conf  nginx.conf  redeploy.sh  setup.sh  sveltekit.service  transcribe-api.service
raw/: transcribe_from_url.py
scripts/: build_sidecar.py  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
(+88 files in other folders)
